; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_output.c_trace_ctxwake_bin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_output.c_trace_ctxwake_bin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_iterator = type { i32, %struct.trace_seq }
%struct.trace_seq = type { i32 }
%struct.ctx_switch_entry = type { i32, i32, i32, i32, i32, i32 }

@TRACE_TYPE_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trace_iterator*, i32)* @trace_ctxwake_bin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trace_ctxwake_bin(%struct.trace_iterator* %0, i32 %1) #0 {
  %3 = alloca %struct.trace_iterator*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ctx_switch_entry*, align 8
  %6 = alloca %struct.trace_seq*, align 8
  store %struct.trace_iterator* %0, %struct.trace_iterator** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.trace_iterator*, %struct.trace_iterator** %3, align 8
  %8 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %7, i32 0, i32 1
  store %struct.trace_seq* %8, %struct.trace_seq** %6, align 8
  %9 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %10 = load %struct.trace_iterator*, %struct.trace_iterator** %3, align 8
  %11 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @trace_assign_type(%struct.ctx_switch_entry* %9, i32 %12)
  %14 = load %struct.trace_seq*, %struct.trace_seq** %6, align 8
  %15 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %16 = getelementptr inbounds %struct.ctx_switch_entry, %struct.ctx_switch_entry* %15, i32 0, i32 5
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq* %14, i32 %17)
  %19 = load %struct.trace_seq*, %struct.trace_seq** %6, align 8
  %20 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %21 = getelementptr inbounds %struct.ctx_switch_entry, %struct.ctx_switch_entry* %20, i32 0, i32 4
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq* %19, i32 %22)
  %24 = load %struct.trace_seq*, %struct.trace_seq** %6, align 8
  %25 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %26 = getelementptr inbounds %struct.ctx_switch_entry, %struct.ctx_switch_entry* %25, i32 0, i32 3
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq* %24, i32 %27)
  %29 = load %struct.trace_seq*, %struct.trace_seq** %6, align 8
  %30 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %31 = getelementptr inbounds %struct.ctx_switch_entry, %struct.ctx_switch_entry* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq* %29, i32 %32)
  %34 = load %struct.trace_seq*, %struct.trace_seq** %6, align 8
  %35 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %36 = getelementptr inbounds %struct.ctx_switch_entry, %struct.ctx_switch_entry* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq* %34, i32 %37)
  %39 = load %struct.trace_seq*, %struct.trace_seq** %6, align 8
  %40 = load %struct.ctx_switch_entry*, %struct.ctx_switch_entry** %5, align 8
  %41 = getelementptr inbounds %struct.ctx_switch_entry, %struct.ctx_switch_entry* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq* %39, i32 %42)
  %44 = load i32, i32* @TRACE_TYPE_HANDLED, align 4
  ret i32 %44
}

declare dso_local i32 @trace_assign_type(%struct.ctx_switch_entry*, i32) #1

declare dso_local i32 @SEQ_PUT_FIELD_RET(%struct.trace_seq*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
